Add blog post HTML pages

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 				<div class="row">
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/ey_blog_5.jpeg');">
+              <a href="blog-babyshower.html" class="block-20" style="background-image: url('images/ey_blog_5.jpeg');">
               </a>
               <div class="text pt-3 pb-4 px-4">
                 <div class="meta">
@@ -516,14 +516,14 @@
                 </div>
                 <h3 class="heading"><a href="#">Look at our mommy to BEE enjoy the BUZZ!</a></h3>
                 <p class="clearfix">
-                  <a href="#" class="float-left read">Read more</a>
+                  <a href="blog-babyshower.html" class="float-left read">Read more</a>
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/ey_blog_2.jpg');">
+              <a href="blog-birthday.html" class="block-20" style="background-image: url('images/ey_blog_2.jpg');">
               </a>
               <div class="text pt-3 pb-4 px-4">
                 <div class="meta">
@@ -532,14 +532,14 @@
                 </div>
                 <h3 class="heading"><a href="#">Did someone say Pizza! This was our take at a pizza party </a></h3>
                 <p class="clearfix">
-                  <a href="#" class="float-left read">Read more</a>
+                  <a href="blog-birthday.html" class="float-left read">Read more</a>
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/ey_blog_3.jpg');">
+              <a href="blog-teaparty.html" class="block-20" style="background-image: url('images/ey_blog_3.jpg');">
               </a>
               <div class="text pt-3 pb-4 px-4">
                 <div class="meta">
@@ -548,7 +548,7 @@
                 </div>
                 <h3 class="heading"><a href="#">Who doesn't like a tea party with friends </a></h3>
                 <p class="clearfix">
-                  <a href="#" class="float-left read">Read more</a>
+                  <a href="blog-teaparty.html" class="float-left read">Read more</a>
                 </p>
               </div>
             </div>
