some text fixed

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -305,7 +307,7 @@
 						<div class="staff">
 							<div class="img" style="background-image: url(images/ey_balloon_arch_9.jpeg);"></div>
 							<div class="text pt-4">
-								<h3>Round Metal Arch</h3>
+								<h3>Balloon Wreath</h3>
 								<span class="position mb-2">Theme Based</span>
 
 							</div>
@@ -348,31 +350,31 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="">Name</label>
-                    <input type="text" class="form-control" placeholder="Full Name">
+                    <input type="text" class="form-control" placeholder="Full Name" name="name">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="">Email</label>
-                    <input type="email" class="form-control" placeholder="Email Address">
+                    <input type="email" class="form-control" placeholder="Email Address" name="email">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="">Phone Number</label>
-                    <input type="text" class="form-control" placeholder="Phone">
+                    <input type="text" class="form-control" placeholder="Phone" name="phone">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="">Event Date</label>
-                    <input type="text" class="form-control" id="book_date" placeholder="Date">
+                    <input type="text" class="form-control" id="book_date" placeholder="Date" name="date">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="">Delivery Time</label>
-                    <input type="text" class="form-control" id="book_time" placeholder="Time">
+                    <input type="text" class="form-control" id="book_time" placeholder="Time" name="time">
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -393,7 +395,7 @@
                 <div class="col-md-12">
                   <div class="form-group">
                     <label for="">Event Details</label>
-                    <input type="text" class="form-control" placeholder="Tell us something about your event">
+                    <input type="text" class="form-control" placeholder="Tell us something about your event" name="details">
                   </div>
                 </div>
                 <div class="col-md-12 mt-3">
