Facebook link added

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
     }
   </script>
   <script> function facebook() {
-  location.replace("https://www.instagram.com/event_fullyyours/")
+  location.replace("https://www.facebook.com/Eventfullyyours-102370774703509/")
     }
   </script>
   </body>
