--- a/index.html
+++ b/index.html
@@ -582,19 +582,19 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Instagram</h2>
               <div class="thumb d-sm-flex">
-	            	<a href="#" class="thumb-menu img" style="background-image: url(images/ey_insta_1.jpg);">
+	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_1.jpg);">
 	            	</a>
-	            	<a href="#" class="thumb-menu img" style="background-image: url(images/ey_insta_2.jpeg);">
+	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_2.jpeg);">
 	            	</a>
-	            	<a href="#" class="thumb-menu img" style="background-image: url(images/ey_insta_3.jpg);">
+	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_3.jpg);">
 	            	</a>
 	            </div>
 	            <div class="thumb d-flex">
-	            	<a href="#" class="thumb-menu img" style="background-image: url(images/ey_insta_4.jpg);">
+	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_4.jpg);">
 	            	</a>
-	            	<a href="#" class="thumb-menu img" style="background-image: url(images/ey_insta_5.jpeg);">
+	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_5.jpeg);">
 	            	</a>
-	            	<a href="#" class="thumb-menu img" style="background-image: url(images/ey_insta_6.jpg);">
+	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_6.jpg);">
 	            	</a>
 	            </div>
             </div>
