--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="home-slider owl-carousel js-fullheight">
-      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_1.jpg);">
+    <section class="home-slider owl-carousel">
+      <div class="slider-item" style="background-image: url(images/ey_bg_1.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
