--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="home-slider js-fullheight">
+    <section class="home-slider owl-carousel js-fullheight">
       <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_1.jpg);">
       	<div class="overlay"></div>
         <div class="container">
@@ -241,13 +241,13 @@
 
     <section id= "photos" class="ftco-section">
     	<div class="container">
-    		<div class="row no-gutters justify-content-center mb-5 pb-2">
+    		<!-- <div class="row no-gutters justify-content-center mb-5 pb-2">
           <div class="col-md-12 text-center heading-section ftco-animate">
           	<span class="subheading">Photo Gallery</span>
             <h2 class="mb-4">Our Balloon Arches</h2>
           </div>
-        </div>
-        <section class="home-slider owl-carousel js-fullheight">
+        </div> -->
+        <!-- <section class="home-slider owl-carousel js-fullheight">
           <div class="slider-item js-fullheight" style="background-image: url(images/ey_balloon_arch_6.jpg);">
             <div class="overlay"></div>
             <div class="container">
@@ -260,9 +260,9 @@
             <div class="container">
 
             </div>
-          </div>
+          </div> -->
 
-          <div class="slider-item js-fullheight" style="background-image: url(images/ey_balloon_arch_8.jpg);">
+          <!-- <div class="slider-item js-fullheight" style="background-image: url(images/ey_balloon_arch_8.jpg);">
             <div class="overlay"></div>
             <div class="container">
 
@@ -277,7 +277,7 @@
             </div>
           </div>
 
-        </section>
+        </section> -->
 
 
 
