--- a/index.html
+++ b/index.html
@@ -78,23 +78,23 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
-    <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_1.jpg);">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
 
-          <div class="col-md-12 col-sm-12 text-center ftco-animate">
-            <span class="subheading">Let Eventfully Your's make your event</span>
-            <h1 class="mb-4">Elegant </h1>
+    <section class="home-slider owl-carousel js-fullheight">
+      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_1.jpg);">
+      	<div class="overlay"></div>
+        <div class="container">
+          <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
+
+            <div class="col-md-12 col-sm-12 text-center ftco-animate">
+            	<span class="subheading">Let Eventfully Your's make your event</span>
+              <h1 class="mb-4">Elegant </h1>
+            </div>
+
           </div>
-
         </div>
       </div>
-    </div>
-    <!-- <section class="home-slider owl-carousel js-fullheight"> -->
 
-
-      <!-- <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_2.jpg);">
+      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_2.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
@@ -121,7 +121,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <section class="ftco-section ftco-no-pt ftco-no-pb">
     	<div class="container-fluid">
