--- a/blog-babyshower.html
+++ b/blog-babyshower.html
@@ -6,7 +6,7 @@
       transform: scale(3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
       }
     </style>
-    <title>Eventfully Your's</title>
+    <title>Eventfully Yours</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -57,7 +57,7 @@
     </div>
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Eventfully Your's</a>
+	      <a class="navbar-brand" href="index.html">Eventfully Yours</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -335,7 +335,7 @@
         <div class="row mb-5">
           <div class="col-md-6 col-lg-4">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Eventfully Your's</h2>
+              <h2 class="ftco-heading-2">Eventfully Yours</h2>
               <p>Have a party to plan? Let us take the load of the prep so that you can relax and enjoy!</p>
               <h2 class="ftco-heading-2">Contact Us</h2>
               <p>Email: hiitseventfullyyours@gmail.com</p>
