--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       transform: scale(3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
       }
     </style>
-    <title>Eventfully Your's</title>
+    <title>Eventfully Yours</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -59,7 +59,7 @@
     </div>
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Eventfully Your's</a>
+	      <a class="navbar-brand" href="index.html">Eventfully Yours</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -86,7 +86,7 @@
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
 
             <div class="col-md-12 col-sm-12 text-center ftco-animate">
-            	<span class="subheading">Let Eventfully Your's make your event</span>
+            	<span class="subheading">Let Eventfully Yours make your event</span>
               <h1 class="mb-4">Elegant </h1>
             </div>
 
@@ -100,7 +100,7 @@
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
 
             <div class="col-md-12 col-sm-12 text-center ftco-animate">
-            	<span class="subheading">Let Eventfully Your's make your event</span>
+            	<span class="subheading">Let Eventfully Yours make your event</span>
               <h1 class="mb-4">Fun</h1>
             </div>
 
@@ -114,7 +114,7 @@
           <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
             <div class="col-md-12 col-sm-12 text-center ftco-animate">
-            	<span class="subheading">Let Eventfully Your's make your event</span>
+            	<span class="subheading">Let Eventfully Yours make your event</span>
               <h1 class="mb-4">Full of surprises</h1>
             </div>
 
@@ -183,12 +183,26 @@
 					<div class="col-md-5 wrap-about pt-5 pt-md-5 pb-md-3 ftco-animate">
 	          <div class="heading-section mb-4 my-5 my-md-0">
 	          	<span class="subheading">About</span>
-	            <h2 class="mb-4">Eventfully Your's</h2>
+	            <h2 class="mb-4">Eventfully Yours</h2>
 	          </div>
-	          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+	          <p>Hi im Shradha Co-creator of Eventfully Yours!
+                This is my little venture to satisfy my inner artistic self.
+                I love to create and making something happen for someone makes me really happy.
+                So this little baby of ours is here to help you with any party need of yours.
+                We provide the most EXTRA Balloon decor to most elegant place settings
+                Most fun party games to Instagrammable dessert tables!
+                We also do party rentals.
+                All your party needs is US! We will take care of eveything for you.
+                You sit back,relax and have the most fun and leave all the planning to us.
+                We will get you the party of your dreams!</p>
 						<pc class="time">
-							<span>Mon - Fri <strong>8 AM - 11 PM</strong></span>
-							<span><a href="#">+ 1-978-123-4567</a></span>
+              <span><a href="#">CONTACT US:</a></span>
+              <span>Phone: <strong>+1 631-944-2590</strong></span>
+              <span>Email: <strong>hiitseventfullyyours@gmail.com</strong></span>
+							<span>Follow Us:
+                <a href="#" class="icon-facebook" onclick= "facebook()"> </a>
+                <a href="#" class="icon-instagram" onclick= "instagram()"> </a>
+              </span>
 						</p>
 					</div>
 				</div>
@@ -212,8 +226,10 @@
 
 
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Birthday Party</h3>
-                <p> We organize special birthday parties for one year olds to our favourites oldies but goldies.</p>
+                <h3 class="heading">PARTY RENTALS</h3>
+                <p> We have gorgeous backdrops, party fillers, tables, chairs for rent.
+                    You see something trending on social media dont worry we've got you!
+                    From Donut walls to Marquee letters we have it all!</p>
               </div>
             </div>
           </div>
@@ -221,8 +237,10 @@
             <div class="media block-6 services d-block">
 
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Baby Shower</h3>
-                <p> Pamper the mom-to-be by throwing an awesome baby shower of the theme of her choice.</p>
+                <h3 class="heading">THEME PARTIES</h3>
+                <p> We can make your theme party dreams come true.
+                    Disney, Marvel, Graduation celebrations we have it all.
+                    Photo props, photo walls we will have it all at your next event!</p>
               </div>
             </div>
           </div>
@@ -230,8 +248,10 @@
             <div class="media block-6 services d-block">
 
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Handpainted Balloons</h3>
-                <p>Make your special someone's day by giving them a Bouquet of Balloons for any occassion. </p>
+                <h3 class="heading">BALLOONS</h3>
+                <p>No party is complete without Balloons!
+                    We specialize in Handpainted and Hand lettered Balloons.
+                    Get one of our customized Balloon archs and you party guests will never forget! </p>
               </div>
             </div>
           </div>
@@ -239,7 +259,7 @@
 			</div>
 		</section>
 
-    <section id= "photos" class="ftco-section">
+    <!-- <section id= "photos" class="ftco-section"> -->
 
     	<!-- <div class="container">
     		<div class="row no-gutters justify-content-center mb-5 pb-2">
@@ -282,10 +302,10 @@
 
 
 
-    	</div>
-    </section>
+    	<!-- </div>
+    </section> -->
 
-		<section class="ftco-section">
+		<section id= "photos"   class="ftco-section">
 			<div class="container">
 				<div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-12 text-center heading-section ftco-animate">
@@ -565,8 +585,15 @@
         <div class="row mb-5">
           <div class="col-md-6 col-lg-4">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Eventfully Your's</h2>
+              <h2 class="ftco-heading-2">Eventfully Yours</h2>
               <p>Have a party to plan? Let us take the load of the prep so that you can relax and enjoy!</p>
+
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+             <div class="ftco-footer-widget mb-4">
+
               <h2 class="ftco-heading-2">Contact Us</h2>
               <p>Email: hiitseventfullyyours@gmail.com</p>
               <p>Phone: +1 631-944-2590</p>
@@ -576,28 +603,24 @@
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook" onclick= "facebook()"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-instagram" onclick= "instagram()"></span></a></li>
               </ul>
-            </div>
-          </div>
 
-          <div class="col-md-6 col-lg-4">
-             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Instagram</h2>
-              <div class="thumb d-sm-flex">
+                <!-- <h2 class="ftco-heading-2">Instagram</h2> -->
+              <!-- <div class="thumb d-sm-flex">
 	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_1.jpg);">
 	            	</a>
 	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_2.jpeg);">
 	            	</a>
 	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_3.jpg);">
 	            	</a>
-	            </div>
-	            <div class="thumb d-flex">
+	            </div> -->
+	            <!-- <div class="thumb d-flex">
 	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_4.jpg);">
 	            	</a>
 	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_5.jpeg);">
 	            	</a>
 	            	<a href="#" class="thumb-menu img" onclick= "instagram()" style="background-image: url(images/ey_insta_6.jpg);">
 	            	</a>
-	            </div>
+	            </div> -->
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
