Spelling mistake corrected

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 </div>
                 <div class="col-md-12 mt-3">
                   <div class="form-group text-center">
-                    <input type="submit" value="Make a Inquiry" class="btn btn-primary py-3 px-5">
+                    <input type="submit" value="Make an Inquiry" class="btn btn-primary py-3 px-5">
                   </div>
                 </div>
               </div>
