Trying with a single slide

--- a/index.html
+++ b/index.html
@@ -92,9 +92,25 @@
 
           </div>
         </div>
-      </div>
+      </div> 
+  </section>
 
-      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_2.jpg);">
+    <!-- <section class="home-slider owl-carousel js-fullheight">
+      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_1.jpg);">
+      	<div class="overlay"></div>
+        <div class="container">
+          <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
+
+            <div class="col-md-12 col-sm-12 text-center ftco-animate">
+            	<span class="subheading">Let Eventfully Yours make your event</span>
+              <h1 class="mb-4">Elegant </h1>
+            </div>
+
+          </div>
+        </div>
+      </div> -->
+
+      <!-- <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_2.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
@@ -106,9 +122,9 @@
 
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_4.jpg);">
+      <!-- <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_4.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
@@ -121,7 +137,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="ftco-section ftco-no-pt ftco-no-pb">
     	<div class="container-fluid">
