Removed the carousel from the Testimony section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
           </div>
         </div>
-      </div> 
+      </div>
   </section>
 
     <!-- <section class="home-slider owl-carousel js-fullheight">
@@ -458,8 +458,9 @@
         </div>
         <div class="row ftco-animate justify-content-center">
           <div class="col-md-12">
-            <div class="carousel-testimony owl-carousel ftco-owl">
-              <div class="item">
+            <!-- <div class="carousel-testimony owl-carousel ftco-owl"> -->
+            <div class="row">
+              <div class="col-md-4">
                 <div class="testimony-wrap text-center pb-5">
                   <div class="user-img mb-4" style="background-image: url(images/ey_insta_1.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
@@ -473,7 +474,7 @@
                   </div>
                 </div>
               </div>
-              <div class="item">
+              <div class="col-md-4">
                 <div class="testimony-wrap text-center pb-5">
                   <div class="user-img mb-4" style="background-image: url(images/ey_insta_1.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
@@ -487,7 +488,7 @@
                   </div>
                 </div>
               </div>
-              <div class="item">
+              <div class="col-md-4">
                 <div class="testimony-wrap text-center pb-5">
                   <div class="user-img mb-4" style="background-image: url(images/ey_insta_1.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
@@ -501,35 +502,9 @@
                   </div>
                 </div>
               </div>
-              <div class="item">
-                <div class="testimony-wrap text-center pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/ey_insta_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Rose Henderson</p>
-                    <span class="position">Customer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap text-center pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/ey_insta_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Ian Boner</p>
-                    <span class="position">Customer</span>
-                  </div>
-                </div>
-              </div>
             </div>
+
+            <!-- </div> -->
           </div>
         </div>
       </div>
