--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
           .zoom:hover {
       transform: scale(3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
       }
+
+      .owl-carousel .owl-stage, .owl-carousel.owl-drag .owl-item{
+    -ms-touch-action: auto;
+        touch-action: auto;
+}
     </style>
     <title>Eventfully Yours</title>
     <meta charset="utf-8">
@@ -79,6 +84,8 @@
 	  </nav>
     <!-- END nav -->
 
+
+
     <section class="home-slider owl-carousel js-fullheight">
       <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_1.jpg);">
       	<div class="overlay"></div>
@@ -93,24 +100,8 @@
           </div>
         </div>
       </div>
-  </section>
 
-    <!-- <section class="home-slider owl-carousel js-fullheight">
-      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_1.jpg);">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
-
-            <div class="col-md-12 col-sm-12 text-center ftco-animate">
-            	<span class="subheading">Let Eventfully Yours make your event</span>
-              <h1 class="mb-4">Elegant </h1>
-            </div>
-
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_2.jpg);">
+      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_2.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
@@ -122,9 +113,9 @@
 
           </div>
         </div>
-      </div> -->
+      </div>
 
-      <!-- <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_4.jpg);">
+      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_4.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
@@ -137,7 +128,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <section class="ftco-section ftco-no-pt ftco-no-pb">
     	<div class="container-fluid">
