Footer content altered

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_4.jpg);">
       	<div class="overlay"></div>
         <div class="container">
-          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+          <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
 
             <div class="col-md-12 col-sm-12 text-center ftco-animate">
             	<span class="subheading">Let Eventfully Yours make your event</span>
@@ -558,7 +558,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Eventfully Yours</h2>
-              <p>Have a party to plan? Let us take the load of the prep so that you can relax and enjoy!</p>
+              <p>Have a party to plan? Call us, sit back, relax and enjoy!!</p>
 
             </div>
           </div>
