Deleted unwanted images

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     .modal-content {
       margin: auto;
       display: block;
-      width: 80%;
+      height: 80%;
       max-width: 700px;
     }
 
@@ -215,7 +215,7 @@
     					<div class="row">
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div id="myImg" alt="Theme Parties" class="menu-img img zoom" style="background-image: url(images/ey_round_1.jpg);"></div>
+			              <div id="myImg" alt="Theme Parties" class="menu-img img zoom myImg" style="background-image: url(images/ey_round_1.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3>Theme Parties</h3>
 
@@ -224,7 +224,7 @@
     						</div>
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div class="menu-img img zoom" style="background-image: url(images/ey_round_2.jpg);"></div>
+			              <div class="menu-img img zoom myImg" style="background-image: url(images/ey_round_2.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3>Custom Cupcakes</h3>
 
