Tinified the images

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
-    #myImg {
+    .myImg {
       border-radius: 5px;
       cursor: pointer;
       transition: 0.3s;
     }
 
-    #myImg:hover {opacity: 0.7;}
+    .myImg:hover {opacity: 0.7;}
 
     /* The Modal (background) */
     .modal {
@@ -164,7 +164,7 @@
 
 
     <section class="home-slider owl-carousel js-fullheight">
-      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_1.jpg);">
+      <div class="slider-item js-fullheight" style="background-image: url(images/tinified/ey_bg_1.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
@@ -178,7 +178,7 @@
         </div>
       </div>
 
-      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_2.jpg);">
+      <div class="slider-item js-fullheight" style="background-image: url(images/tinified/ey_bg_2.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
@@ -192,7 +192,7 @@
         </div>
       </div>
 
-      <div class="slider-item js-fullheight" style="background-image: url(images/ey_bg_4.jpg);">
+      <div class="slider-item js-fullheight" style="background-image: url(images/tinified/ey_bg_4.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
@@ -215,7 +215,7 @@
     					<div class="row">
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div id="myImg" alt="Theme Parties" class="menu-img img zoom myImg" style="background-image: url(images/ey_round_1.jpg);"></div>
+			              <div id="myImg" alt="Theme Parties" class="menu-img img zoom myImg" style="background-image: url(images/tinified/ey_round_1.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3>Theme Parties</h3>
 
@@ -224,7 +224,7 @@
     						</div>
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div class="menu-img img zoom myImg" style="background-image: url(images/ey_round_2.jpg);"></div>
+			              <div class="menu-img img zoom myImg" style="background-image: url(images/tinified/ey_round_2.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3>Custom Cupcakes</h3>
 
@@ -233,7 +233,7 @@
     						</div>
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div class="menu-img img zoom" style="background-image: url(images/ey_round_3.jpg);"></div>
+			              <div class="menu-img img zoom myImg" style="background-image: url(images/tinified/ey_round_3.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3> Party Rentals</h3>
 
@@ -242,7 +242,7 @@
     						</div>
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div class="menu-img img zoom" style="background-image: url(images/ey_round_4.jpg);"></div>
+			              <div class="menu-img img zoom myImg" style="background-image: url(images/tinified/ey_round_4.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3>Personalised Baloons</h3>
 
@@ -261,8 +261,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-7 d-flex">
-						<div class="img img-1 mr-md-2" style="background-image: url(images/ey_about_me_2.jpeg);"></div>
-						<div class="img img-2 ml-md-2" style="background-image: url(images/ey_about_me_3.jpeg);"></div>
+						<div class="img img-1 mr-md-2" style="background-image: url(images/tinified/ey_about_me_2.jpeg);"></div>
+						<div class="img img-2 ml-md-2" style="background-image: url(images/tinified/ey_about_me_3.jpeg);"></div>
 					</div>
 					<div class="col-md-5 wrap-about pt-5 pt-md-5 pb-md-3 ftco-animate">
 	          <div class="heading-section mb-4 my-5 my-md-0">
@@ -400,7 +400,7 @@
 				<div class="row">
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img" style="background-image: url(images/ey_balloon_1.jpeg);"></div>
+							<div class="img" style="background-image: url(images/tinified/ey_balloon_1.jpeg);"></div>
 							<div class="text pt-4">
 								<h3>Birthday Balloons</h3>
 								<span class="position mb-2">Custom made</span>
@@ -410,7 +410,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img" style="background-image: url(images/ey_balloon_arch_9.jpeg);"></div>
+							<div class="img" style="background-image: url(images/tinified/ey_balloon_arch_9.jpeg);"></div>
 							<div class="text pt-4">
 								<h3>Balloon Wreath</h3>
 								<span class="position mb-2">Theme Based</span>
@@ -420,7 +420,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img" style="background-image: url(images/ey_balloon_5.jpg);"></div>
+							<div class="img" style="background-image: url(images/tinified/ey_balloon_5.jpg);"></div>
 							<div class="text pt-4">
 								<h3>Mother's Day Balloons</h3>
 								<span class="position mb-2">Special Occassions</span>
@@ -430,7 +430,7 @@
 					</div>
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img" style="background-image: url(images/ey_easter_3.jpg);"></div>
+							<div class="img" style="background-image: url(images/tinified/ey_easter_3.jpg);"></div>
 							<div class="text pt-4">
 								<h3>Easter Balloons</h3>
 								<span class="position mb-2">Holiday Special</span>
@@ -442,7 +442,7 @@
 			</div>
 		</section>
 
-		<section id="inquire" class="ftco-section img" style="background-image: url(images/ey_balloon_arch_2.jpeg)" data-stellar-background-ratio="0.5">
+		<section id="inquire" class="ftco-section img" style="background-image: url(images/tinified/ey_balloon_arch_2.jpeg)" data-stellar-background-ratio="0.5">
 			<div class="container">
 				<div class="row d-flex">
           <div class="col-md-7 ftco-animate makereservation p-4 px-md-5 pb-md-5">
@@ -530,7 +530,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="testimony-wrap text-center pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/ey_insta_1.jpg)">
+                  <div class="user-img mb-4" style="background-image: url(images/tinified/ey_insta_1.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
@@ -544,7 +544,7 @@
               </div>
               <div class="col-md-4">
                 <div class="testimony-wrap text-center pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/ey_insta_1.jpg)">
+                  <div class="user-img mb-4" style="background-image: url(images/tinified/ey_insta_1.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
@@ -558,7 +558,7 @@
               </div>
               <div class="col-md-4">
                 <div class="testimony-wrap text-center pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/ey_insta_1.jpg)">
+                  <div class="user-img mb-4" style="background-image: url(images/tinified/ey_insta_1.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
@@ -589,7 +589,7 @@
 				<div class="row">
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-babyshower.html" class="block-20" style="background-image: url('images/ey_blog_5.jpeg');">
+              <a href="blog-babyshower.html" class="block-20" style="background-image: url('images/tinified/ey_blog_5.jpeg');">
               </a>
               <div class="text pt-3 pb-4 px-4">
                 <div class="meta">
@@ -605,7 +605,7 @@
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-birthday.html" class="block-20" style="background-image: url('images/ey_blog_2.jpg');">
+              <a href="blog-birthday.html" class="block-20" style="background-image: url('images/tinified/ey_blog_2.jpg');">
               </a>
               <div class="text pt-3 pb-4 px-4">
                 <div class="meta">
@@ -621,7 +621,7 @@
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-teaparty.html" class="block-20" style="background-image: url('images/ey_blog_3.jpg');">
+              <a href="blog-teaparty.html" class="block-20" style="background-image: url('images/tinified/ey_blog_3.jpg');">
               </a>
               <div class="text pt-3 pb-4 px-4">
                 <div class="meta">
@@ -745,9 +745,8 @@
     // Get the modal
     var modal = document.getElementById("myModal");
 
-
     // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img = document.getElementById('myImg');
+    var img = document.getElementsByClassName('myImg');
 
     var modalImg = document.getElementById('img01');
     console.log(modalImg);
@@ -755,8 +754,8 @@
     img.onclick = function(){
       modal.style.display = "block";
       re = /\((.*)\)/;
-      modalImg.src = document.getElementById('myImg').style.backgroundImage.match(re)[1].replace(/\"/g, "");
-      console.log("tHIS IS FROM CONSOLE", document.getElementById('myImg').style.backgroundImage.match(re)[1])
+      modalImg.src = document.getElementsByClassName('myImg').style.backgroundImage.match(re)[1].replace(/\"/g, "");
+      console.log("tHIS IS FROM CONSOLE", document.getElementsByClassName('myImg').style.backgroundImage.match(re)[1])
       console.log(modalImg);
       captionText.innerHTML = this.alt;
     }
