--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
 
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
+    <!-- <link rel="stylesheet" href="css/magnific-popup.css"> -->
 
-    <link rel="stylesheet" href="css/aos.css">
+    <!-- <link rel="stylesheet" href="css/aos.css"> -->
 
-    <link rel="stylesheet" href="css/ionicons.min.css">
+    <!-- <link rel="stylesheet" href="css/ionicons.min.css"> -->
 
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/jquery.timepicker.css">
 
 
-    <link rel="stylesheet" href="css/flaticon.css">
+    <!-- <link rel="stylesheet" href="css/flaticon.css"> -->
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
-    .myImg {
+    #myImg {
       border-radius: 5px;
       cursor: pointer;
       transition: 0.3s;
     }
 
-    .myImg:hover {opacity: 0.7;}
+    #myImg:hover {opacity: 0.7;}
 
     /* The Modal (background) */
     .modal {
@@ -215,7 +215,7 @@
     					<div class="row">
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div id="myImg" alt="Theme Parties" class="menu-img img zoom myImg" style="background-image: url(images/tinified/ey_round_1.jpg);"></div>
+			              <div id="myImg" alt="Theme Parties" class="menu-img img zoom" style="background-image: url(images/ey_round_1_small.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3>Theme Parties</h3>
 
@@ -224,7 +224,7 @@
     						</div>
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div class="menu-img img zoom myImg" style="background-image: url(images/tinified/ey_round_2.jpg);"></div>
+			              <div class="menu-img img zoom" style="background-image: url(images/tinified/ey_round_2.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3>Custom Cupcakes</h3>
 
@@ -233,7 +233,7 @@
     						</div>
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div class="menu-img img zoom myImg" style="background-image: url(images/tinified/ey_round_3.jpg);"></div>
+			              <div class="menu-img img zoom" style="background-image: url(images/tinified/ey_round_3.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3> Party Rentals</h3>
 
@@ -242,7 +242,7 @@
     						</div>
     						<div class="col-md-3">
     							<div class="featured-menus ftco-animate">
-			              <div class="menu-img img zoom myImg" style="background-image: url(images/tinified/ey_round_4.jpg);"></div>
+			              <div class="menu-img img zoom" style="background-image: url(images/tinified/ey_round_4.jpg);"></div>
 			              <div class="text text-center">
 		                  <h3>Personalised Baloons</h3>
 
@@ -717,8 +717,8 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <!-- <script src="js/popper.min.js"></script> -->
+  <!-- <script src="js/bootstrap.min.js"></script> -->
   <script src="js/jquery.easing.1.3.js"></script>
   <script src="js/jquery.waypoints.min.js"></script>
   <script src="js/jquery.stellar.min.js"></script>
@@ -746,16 +746,16 @@
     var modal = document.getElementById("myModal");
 
     // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img = document.getElementsByClassName('myImg');
+    var img = document.getElementById('myImg');
 
     var modalImg = document.getElementById('img01');
-    console.log(modalImg);
+    console.log(img);
     var captionText = document.getElementById('caption');
     img.onclick = function(){
       modal.style.display = "block";
       re = /\((.*)\)/;
-      modalImg.src = document.getElementsByClassName('myImg').style.backgroundImage.match(re)[1].replace(/\"/g, "");
-      console.log("tHIS IS FROM CONSOLE", document.getElementsByClassName('myImg').style.backgroundImage.match(re)[1])
+      modalImg.src = document.getElementById('myImg').style.backgroundImage.match(re)[1].replace(/\"/g, "");
+      console.log("tHIS IS FROM CONSOLE", document.getElementById('myImg').style.backgroundImage.match(re)[1])
       console.log(modalImg);
       captionText.innerHTML = this.alt;
     }
